--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "haias-company",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lucarud.github.io/Haias-Company-Site--React",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -9,6 +10,7 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "gh-pages": "^6.1.1",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
